tests/ui/ferrocene/compiler-arguments/edition/edition_2015-without-extern-crate.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `some_crate`
  --> $DIR/edition_2015-without-extern-crate.rs:6:7
   |
LL |     ::some_crate::hello();
   |       ^^^^^^^^^^ use of unresolved module or unlinked crate `some_crate`
   |
help: you might be missing a crate named `some_crate`, add it to your project and import it in your code
   |
LL + extern crate some_crate;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
